src/test/ui/issues/issue-34334.stderr
error: expected one of `,` or `>`, found `=`
  --> $DIR/issue-34334.rs:12:29
   |
LL |     let sr: Vec<(u32, _, _) = vec![]; //~ ERROR expected one of `,` or `>`, found `=`
   |         --                  ^ expected one of `,` or `>` here
   |         |
   |         while parsing the type for `sr`

error: aborting due to previous error

